--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "postinstall": "npm rebuild sqlite3 --build-from-source"
   },
   "dependencies": {
     "@line/bot-sdk": "^9.0.0",
@@ -16,3 +17,4 @@
     "sqlite3": "^5.1.7"
   }
 }
+
